[package]
name = "bdic-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = "0.32"
hex = "0.4"
iced = { version = "0.13", default-features = false, features = ["wgpu"] }
sha2 = "0.10"

# Optimize release builds for small binary size.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
